// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/DefaultStep > renders correctly - active step 1`] = `
<div
  class="perseid-form__step perseid-form__step--initial--root__0--active"
  id="root__0"
>
  <div
    class="perseid-form__step__fields"
  >
    <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
    
    <!---->
    
  </div>
</div>
`;

exports[`vue/DefaultStep > renders correctly - inactive step 1`] = `
<div
  class="perseid-form__step perseid-form__step--initial--root__0"
  id="root__0"
>
  <div
    class="perseid-form__step__fields"
  >
    <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
    
    <!---->
    
  </div>
</div>
`;
